--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,71 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.6.RELEASE</version>
-  </parent>
-  <groupId>com.tailgrass.example</groupId>
-  <artifactId>application-example</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>application-example</name>
-  <description>程序示例</description>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>common-data</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.6.RELEASE</version>
+	</parent>
+	<groupId>com.tailgrass.example</groupId>
+	<artifactId>application-example</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>application-example</name>
+	<description>程序示例</description>
+	<packaging>pom</packaging>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+		<java.version>1.8</java.version>
+		<mybatis-spring-boot.version>2.1.1</mybatis-spring-boot.version>
+		<dubbo.version>0.2.0</dubbo.version>
+		<druid-spring.version>1.1.21</druid-spring.version>
+		<fast-json.version>1.2.66</fast-json.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<mybatis-spring-boot.version>2.1.1</mybatis-spring-boot.version>
+	</properties>
+
+	<modules>
+		<module>common-data</module>
+	</modules>
+
+
+	<dependencies>
+		<!-- log4j loader -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		<!-- test loader -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- devtools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<!-- fastjson loader -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fast-json.version}</version>
+		</dependency>
+	</dependencies>
 </project>
